# SConn

./: .gitignore  README.md  default_client_config.yaml  default_server_config.yaml  defualt_server_config.yaml  pyproject.toml  sconn_client_config_path.yaml  sconn_server_config_path.yaml  test.py  testing_client_config.yaml  testing_mtls_client_config.yaml  testing_mtls_server_config.yaml  testing_server_config.yaml
docs/: conf.py  connections_and_proto_settings.drawio  index.rst
docs/models/: server-client.rst
sconn/: setting_parser.py
sconn/client/: client.py
sconn/client/handlers/: client_abstract_handler.py  client_sc_model_handler.py
sconn/protocol/: communication_errors.py  constants.py  packet_analyzer.py  packet_builder.py  transmission.py
sconn/server/: server.py  setting_parser.py
sconn/server/handlers/: abstract_handler.py  server_abstract_handler.py  server_client_handler.py  server_sc_model_handler.py
sconn/utils/: config_interface.py  connection_utils.py  setting_parser.py
tests/: test.py  test_sc_model.py  test_setting_parser.py  testing_client_config.yaml  testing_mtls_client_config.yaml  testing_mtls_server_config.yaml  testing_server_config.yaml
tests/certs/client/: client-cert-key.pem  client-cert.csr  client-cert.pem  client-extfile.cnf
tests/certs/mtls_ca/: mtls-ca-key.pem  mtls-ca.pem  mtls-ca.srl
tests/certs/normal_ca/: normal-ca-key.pem  normal-ca.pem  normal-ca.srl
tests/certs/server/: server-cert-key.pem  server-cert.csr  server-cert.pem  server-extfile.cnf
